# ha-apps

./: .gitignore  AGENTS.md  README.md  repository.yaml
app-dasher/: AGENTS.md  Cargo.toml  Dockerfile  README.md  config.yaml
app-dasher-rust/: .dockerignore  AGENTS.md  Cargo.toml  Dockerfile  config.yaml
app-dasher-rust/rootfs/etc/services.d/dasher/: finish  run
app-dasher-rust/src/: config.rs  logging.rs  main.rs  state.rs  utils.rs
app-dasher-rust/src/http/: proxy.rs
app-dasher-rust/src/websocket/: entities.rs  filtered.rs  mod.rs  transparent.rs
app-dasher/rootfs/app/: dasher.py  requirements.txt
app-dasher/rootfs/etc/s6-overlay/s6-rc.d/dasher/: run
app-dasher/src/: logging.rs  main.rs  state.rs
app-dasher/src/http/: inject.rs  mod.rs  panel_tracker.rs  proxy.rs
app-dasher/src/websocket/: entities.rs  filtered.rs  mod.rs  transparent.rs
app-greenroom/: AGENTS.md  Cargo.toml  Dockerfile  README.md  build.rs  config.yaml  sync-versions.sh
app-greenroom/docs/: CLI.md  auth.md  cli.md
app-greenroom/rootfs/app/: Cargo.toml  build.rs
app-greenroom/rootfs/app/proto/: api_options.proto
app-greenroom/rootfs/app/src/: main.rs  mqtt.rs
app-greenroom/rootfs/app/src/librespot/: client.rs
app-greenroom/rootfs/etc/s6-overlay/s6-rc.d/greenroom/: finish  run
app-greenroom/src/: main.rs  mqtt.rs  mqtt_state.rs  state.rs  token.rs  web.rs
app-greenroom/src/librespot/: client.rs  cluster.rs  connection.rs  demo.rs  helpers.rs  mod.rs  state.rs
app-shack/: .dockerignore  AGENTS.md  Dockerfile  README.md  TODO.md  config.yaml  sync-version.sh  sync-versions.py
app-shack/docs/: blocking-calls.md  integration-reloads.md  oauth.md  state-restore.md
app-shack/rootfs/app/: .gitignore  config.py  credentials.py  main.py  mqtt_bridge.py  pyproject.toml  requirements-dev.txt  requirements.txt  shack-config.yaml.example
app-shack/rootfs/app/metadata/: repository_status.json  unsupported_repos.json
app-shack/rootfs/app/scripts/: debug_custom_repo.py  test_flightradar24.py  test_import_patch.py  test_integration.py  test_meross_lan.py  test_meross_profile.py
app-shack/rootfs/app/shim/: __init__.py  block_async_io.py  config_entries.py  const.py  core.py  entity.py  exceptions.py  frozen_dataclass_compat.py  hass.py  import_patch.py  logging.py  manager.py  mocks.py  models.py  options_map.py  registries.py  restore.py  selectors.py  storage.py
app-shack/rootfs/app/shim/github/: __init__.py  auth.py
app-shack/rootfs/app/shim/ha_fetched/: __init__.py  _stub_helpers_deprecation.py  _stub_util_hass_dict.py  _stub_util_signal_type.py  const.py  exceptions.py
app-shack/rootfs/app/shim/ha_fetched/util/: event_type.py
app-shack/rootfs/app/shim/hacs_fetched/: __init__.py  _stub_components_config___init__.py  _stub_components_diagnostics___init__.py  _stub_components_frontend___init__.py  _stub_components_lovelace___init__.py  _stub_components_persistent_notification___init__.py  _stub_components_recorder___init__.py  _stub_components_repairs___init__.py  _stub_components_sensor___init__.py  _stub_components_switch___init__.py  _stub_components_system_health___init__.py  _stub_components_update___init__.py  _stub_components_websocket_api___init__.py  _stub_helpers_device_registry.py  _stub_helpers_entity_registry.py  _stub_loader.py
app-shack/rootfs/app/shim/hacs_fetched/utils/: __init__.py  data.py  file_system.py  queue_manager.py
app-shack/rootfs/app/shim/integrations/: __init__.py  loader.py  manager.py
app-shack/rootfs/app/shim/stubs/: __init__.py  application_credentials.py  base.py  components.py  coordinator.py  helpers.py  network.py  oauth2.py  util.py
app-shack/rootfs/app/shim/web/: __init__.py  app.py  const.py  renderers.py  schema.py  supervisor.py  translations.py
app-shack/rootfs/app/shim/web/routes/: api.py  auth.py  config_flows.py  credentials.py  fragments.py  github_auth.py  integrations.py
app-shack/rootfs/app/shim/web/templates/: available_fragment.html  base.html  config_form.html  config_form_content.html  credentials.html  github_auth.html  index.html  integration_detail.html  integration_release_notes.html  integration_versions.html  mqtt_status.html  status.html
app-shack/rootfs/app/tests/: __init__.py  test_block_async_io.py  test_camera_coordinator.py  test_config.py  test_config_entry_reauth.py  test_config_flow.py  test_core.py  test_dataclass_inheritance.py  test_entity_utils.py  test_github_auth.py  test_integration_detail_render.py  test_integrations.py  test_manager.py  test_mqtt_bridge.py  test_oauth2.py  test_platforms.py  test_restore_entity.py  test_shim_additions.py  test_unsupported_repos.py  test_web.py
app-shack/rootfs/data/: credentials.json.example
app-shack/rootfs/etc/s6-overlay/s6-rc.d/shack/: finish  run
app-shack/rootfs/etc/services.d/shack/: finish  run
app-shack/scripts/: fetch_ha_files.py  fetch_hacs_files.py
ha-dasher/: Dockerfile  config.yaml
ha-dasher/rootfs/app/: dasher.py
ha-dasher/rootfs/etc/services.d/dasher/: finish  run
