[package]
name = "dasher"
version = "0.6.5"
edition = "2021"
authors = ["Gene Hand"]
description = "Filter websocket events for dashboard entities"
rust-version = "1.75"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# HTTP server and WebSocket
axum = { version = "0.8", features = ["ws", "macros"] }
yawc = { version = "0.3", features = ["axum", "reqwest"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }

# Lazy static
lazy_static = "1.4"

# HTTP client for proxying
reqwest = { version = "0.13", features = ["stream", "rustls"], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Regex for pattern matching
regex = "1.10"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Shared state
dashmap = "6.1"

# HTTP types
http = "1.0"
bytes = "1.5"
futures = "0.3"
futures-util = "0.3"

[dev-dependencies]
wiremock = "0.6"
flate2 = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
