[package]
name = "greenroom"
version = "0.3.4"
edition = "2021"
authors = ["Gene Hand"]
description = "Spotify Connect monitor device for Home Assistant"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"

# Pin vergen crates first to resolve librespot-core build conflict
# (librespot-core expects specific vergen-lib API versions)
vergen = "=9.0.6"
vergen-lib = "=9.1.0"
vergen-gitcl = "=1.0.8"

# Spotify - using individual crates for better control
librespot-core = "0.8"
librespot-oauth = "0.8"
librespot-metadata = "0.8"
librespot-protocol = { version = "0.8", default-features = false }

# Protobuf (used by librespot)
protobuf = "3.7"
bytes = "1"

# MQTT
rumqttc = "0.24"

# HTTP client (for spclient)
hyper = { version = "1", features = ["full"] }
http = "1"
reqwest = { version = "0.12", features = ["json"] }

# Web server (for OAuth UI)
axum = { version = "0.7", features = ["tokio"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
tower = { version = "0.4", features = ["make"] }

# OAuth PKCE and token exchange
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
urlencoding = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["macros"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Configuration
dotenvy = "0.15"
clap = { version = "4", features = ["derive", "env"] }

# Browser opener for OAuth
open = "5"

# No build dependencies needed

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
