[package]
name = "greenroom"
version = "0.1.0"
edition = "2021"
authors = ["Gene Hand"]
description = "Spotify Connect device for Home Assistant via MQTT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"

# Pin vergen crates first to resolve librespot-core build conflict
# (librespot-core expects specific vergen-lib API versions)
vergen = "=9.0.6"
vergen-lib = "=9.1.0"
vergen-gitcl = "=1.0.8"

# Spotify - using individual crates for better control
librespot-core = "0.8"
librespot-connect = "0.8"
librespot-oauth = "0.8"
librespot-metadata = "0.8"
librespot-protocol = { version = "0.8", default-features = false }
librespot-playback = { version = "0.8", default-features = false }

# Protobuf
prost = "0.12"
protobuf = "3.7"
bytes = "1"

# MQTT
rumqttc = "0.24"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Encryption (optional for ESPHome)
# snow = "0.9"  # Noise protocol - commented out for now

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Configuration
dotenvy = "0.15"
clap = { version = "4", features = ["derive", "env"] }

# Browser opener for OAuth
open = "5"

[build-dependencies]
prost-build = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
