[project]
name = "app-shack"
version = "0.8.9"
description = "Home Assistant compatibility layer for running integrations outside of HA"
requires-python = ">=3.14"
dependencies = [
    # HA Shim core dependencies
    "paho-mqtt>=2.1.0",
    "pyyaml>=6.0",
    "colorlog>=6.8.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "jinja2>=3.1.0",
    "aiohttp>=3.9.0",
    "voluptuous>=0.14.0",
    "pyjwt>=2.8.0",
    "yarl>=1.9.0",
    "python-multipart>=0.0.6",
    "cryptography>=42.0.0",

    # HACS integration dependencies
    "aiogithubapi>=22.10.1",
    "awesomeversion>=22.9.0",

    # Workaround for FlightRadarAPI
    "beautifulsoup4",

    # Release notes rendering
    "markdown>=3.6",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "FlightRadarAPI==1.4.0",
    "pycountry==24.6.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests that require external dependencies (deselect with '-m \"not integration\"')",
]
